[gd_scene load_steps=9 format=2]

[ext_resource path="res://gfx_src/items.png" type="Texture" id=1]
[ext_resource path="res://Fish.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FishSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 6, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_end_of_enter_anim"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FishSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FishSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("FishSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "scared_animation_finished"
} ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 39.827

[sub_resource type="CircleShape2D" id=6]
radius = 80.2687

[node name="Fish" type="Node2D"]
script = ExtResource( 2 )

[node name="FishSprite" type="Sprite" parent="."]
position = Vector2( -38.2138, -3.20486 )
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 11
frame = 4
region_enabled = true
region_rect = Rect2( 0, 0, 2063, 188 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hide"
anims/enter = SubResource( 1 )
anims/hide = SubResource( 2 )
anims/move = SubResource( 3 )
anims/scared = SubResource( 4 )

[node name="FishView" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishView"]
shape = SubResource( 5 )

[node name="PredatorView" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PredatorView"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="FishView" to="." method="_on_FishView_body_entered"]
[connection signal="body_entered" from="PredatorView" to="." method="_on_PredatorView_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
